--- a/index.html
+++ b/index.html
@@ -351,7 +351,9 @@
 
     <section id="about">
         <h2>About</h2>
-        <p>Suhaib Nazir is an experienced professional with expertise in various fields. His passion for learning and his dedication to excellence have shaped his career. This website showcases his achievements, gallery, and contact details.</p>
+        <p>Suhaib Nazir is a passionate cricketer with extensive experience in the sport. His dedication, discipline, and love for cricket have shaped his journey, making him a skilled player and a strategic thinker on the field. With years of practice and a deep understanding of the game, he continuously strives for excellence, pushing his limits to achieve new milestones.
+
+This website showcases his achievements, a gallery of memorable moments, and contact details for collaborations and inquiries.</p>
     </section>
 
     <section id="achievements">
