--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 </head>
 <body>
     <header>
-        <h1>Suhaib Nazir</h1>
+        <h1 style="color: #FF6347; font-weight: bold;">Suhaib Nazir</h1>
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <nav class="top-menu">
             <a href="#achievements" class="menu-item">Achievements</a>
@@ -405,7 +405,7 @@ This website showcases his achievements, a gallery of memorable moments, and con
     </section>
 
     <footer>
-        <p>&copy; 2025 Developed by <mark> Saquib Nazeer </mark>| All rights reserved.</p>
+        <p>&copy; 2025 Developed by <mark> Saquib Nazeer </mark> | All rights reserved.</p>
     </footer>
 
     <script>
