--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 </head>
 <body>
     <header>
-        <h1 style="color: #FF6347; font-weight: bold;">Suhaib Nazir</h1>
+       <h1 style="color: white; font-weight: bold; text-shadow: 2px 2px 5px black;">Suhaib Nazir</h1>
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <nav class="top-menu">
             <a href="#achievements" class="menu-item">Achievements</a>
