--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
         /* Profile photo background */
         header {
-            background-image: url('https://scontent.fsxv4-1.fna.fbcdn.net/v/t39.30808-6/476229129_1831322457637838_5156340334007255880_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=saCQkV7euYwQ7kNvgEuhgoH&_nc_zt=23&_nc_ht=scontent.fsxv4-1.fna&_nc_gid=A65FzN8zND12OoVB1ojnOmE&oh=00_AYAXGdmzqQIYMVLSmLHGPYoPzFkiEsBRxdKCQwwhl8ywIQ&oe=67A4209D');
-            background-size: cover;
+            background-image: url('images/profile.jpg')
             background-position: center;
             color: white;
             text-align: center;
