--- a/index.html
+++ b/index.html
@@ -369,15 +369,13 @@ This website showcases his achievements, a gallery of memorable moments, and con
             <h3>Centuries</h3>
             <p>2</p>
         </div>
-    </section>
-
-    <section id="gallery">
+     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery">
-            <div><img src="https://scontent.fsxv4-1.fna.fbcdn.net/v/t39.30808-6/460818547_533786499022791_8796581829868835188_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=3Gi3mfv0groQ7kNvgGxpeJk&_nc_zt=23&_nc_ht=scontent.fsxv4-1.fna&_nc_gid=AFViypRbQUa8gU0FtvDZWVe&oh=00_AYALV1S5SjJe8OGeYuI4cuauwtchV6skqz2tQGp1lSnXVg&oe=67A43DBC" alt="RPL FINAL"></div>
-            <div><img src="https://scontent.fixm4-2.fna.fbcdn.net/v/t39.30808-6/466640706_570271342040973_2348399235782998107_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=WkOCADeRhDgQ7kNvgEzaNJv&_nc_zt=23&_nc_ht=scontent.fixm4-2.fna&_nc_gid=AfB_GKjEofjCGhryOiHLCg5&oh=00_AYBTiOltCWQ3J4WEk_Y5wXuj8r3WJMoRbUfwts92DaT5lg&oe=67A42E58" alt="READY FOR THE SHOW!!!!"></div>
-            <div><img src="https://scontent.fsxv4-1.fna.fbcdn.net/v/t39.30808-6/453187134_500746565660118_6924892352460943270_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=jEl1lyBRf1EQ7kNvgFYW5Zs&_nc_zt=23&_nc_ht=scontent.fsxv4-1.fna&_nc_gid=AA6bd3wOqvdCQxud9Dnc6-6&oh=00_AYA07sZWHOX5RBbnd3LLGE9n1qQhTO2owQ0jjpsPPHylCQ&oe=67A40FFD" alt="PSL FINALS"></div>
-            <div><img src="https://scontent.fsxv4-1.fna.fbcdn.net/v/t39.30808-6/473276511_611840424550731_3970679981122975027_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_ohc=TiriHrqsSG8Q7kNvgH0U3Nf&_nc_zt=23&_nc_ht=scontent.fsxv4-1.fna&_nc_gid=AwGSl67RUgpmlpBo67dw7ha&oh=00_AYCIedTUfF9GhSfNuEYQm-NCa8Yz-WQd29O1jGoCGKo6gQ&oe=67A44144" alt="TEAM DRAGON RIDERS"></div>
+            <div><img src="images/npl-final.jpg" alt="RPL FINAL"></div>
+            <div><img src="images/readyy.jpg" alt="READY FOR THE SHOW!!!!"></div>
+            <div><img src="images/psl-final.jpg" alt="PSL FINALS"></div>
+            <div><img src="images/team.jpg" alt="TEAM DRAGON RIDERS"></div>
         </div>
     </section>
 
