--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         /* Profile photo background */
         header {
-            background-image: url('images/profile.jpg')
+            background-image: url(images/profile.jpg)
             background-position: center;
             color: white;
             text-align: center;
@@ -375,7 +375,7 @@ This website showcases his achievements, a gallery of memorable moments, and con
             <div><img src="images/npl-final.jpg" alt="RPL FINAL"></div>
             <div><img src="images/readyy.jpg" alt="READY FOR THE SHOW!!!!"></div>
             <div><img src="images/psl-final.jpg" alt="PSL FINALS"></div>
-            <div><img src="images/team.jpg" alt="TEAM DRAGON RIDERS"></div>
+            <div><img src="images/pose.jpg" alt="TEAM DRAGON RIDERS"></div>
         </div>
     </section>
 
