--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         /* Profile photo background */
         header {
-            background-image: url('images/ready.jpg');
+            background-image: url('images/readyy.jpg');
             background-position: center;
             color: white;
             text-align: center;
