--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
 
         /* Profile photo background */
        header {
-    background-image: url('images/profile.jpg');
+    background-image: url('images/profile.jpg'); /* Ensure correct path */
     background-position: center;
-    background-size: cover;  /* Ensures the image covers the whole area */
-    background-repeat: no-repeat; /* Prevents tiling */
-    height: 100vh; /* Makes header take full viewport height */
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh; /* Full screen height */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
-
         header h1 {
             font-size: 3rem;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
