--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         /* Profile photo background */
        header {
-    background-image: url('images/profile.jpg'); /* Ensure correct path */
+    background-image: url('images/readyy.jpg'); /* Ensure correct path */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
