--- a/index.html
+++ b/index.html
@@ -228,12 +228,14 @@
             line-height: 1.6;
         }
 
-       @media screen and (max-width: 768px) {
-    header {
-        background-size: contain; /* Fits image fully */
-        height: 50vh; /* Adjust height for smaller screens */
-    }
-}
+           @media screen and (max-width: 768px) {
+            nav {
+                display: none; /* Hide the menu by default */
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+                margin-top: 20px;
+            }
 
             nav a {
                 font-size: 20px;
